test/org/midica/testfiles/failing/include-with-invalid-param.midica
INCLUDE_FILE inc/instruments.midica

MACRO test
	0 c /4
END
INCLUDE test v=50